--- a/index.html
+++ b/index.html
@@ -48,17 +48,19 @@
     <section class="hero">
       <div class="container">
         <h1 class="hero-head">Effective Solutions for Your Business</h1>
-        <button class="btn order-btn" type="button">Order Service</button>
+        <a href="data-modal-open" class="link">
+          <button class="btn order-btn" type="button">Order Service</button>
+        </a>
       </div>
     </section>
 
     <section class="new">
-      <div class="container">
+      <div class=" container">
         <h2 class="visually-hidden">new</h2>
         <ul class="new-list list">
           <li class="new-item">
             <div class="container-new-icon">
-              <svg class="new-list-icon" widht="64" height="64">
+              <svg class="new-list-icon" width="64" height="64">
                 <use href="/images/icon.svg#icon-antenna"></use>
               </svg>
             </div>
@@ -70,7 +72,7 @@
           </li>
           <li class="new-item">
             <div class="container-new-icon">
-              <svg class="new-list-icon" widht="64" height="64">
+              <svg class="new-list-icon" width="64" height="64">
                 <use href="/images/icon.svg#icon-clock"></use>
               </svg>
             </div>
@@ -82,7 +84,7 @@
           </li>
           <li class="new-item">
             <div class="container-new-icon">
-              <svg class="new-list-icon" widht="64" height="64">
+              <svg class="new-list-icon" width="64" height="64">
                 <use href="/images/icon.svg#icon-diagram"></use>
               </svg>
             </div>
@@ -94,7 +96,7 @@
           </li>
           <li class="new-item">
             <div class="container-new-icon">
-              <svg class="new-list-icon" widht="64" height="64">
+              <svg class="new-list-icon" width="64" height="64">
                 <use href="/images/icon.svg#icon-astronaut"></use>
               </svg>
             </div>
@@ -150,32 +152,35 @@
               <p class="text">Product Designer</p>
               <ul class="team-icon-list list">
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-instagram-2">
+                  <a class="team-icon-link"> <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-instagram-2">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-twitter-1">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-twitter-1">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-facebook-1">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-facebook-1">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-linkedin-1">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-linkedin-1">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
               </ul>
             </div>
@@ -189,32 +194,36 @@
               <p class="text">Frontend Developer</p>
               <ul class="team-icon-list list">
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-instagram-2">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-instagram-2">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-twitter-1">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-twitter-1">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-facebook-1">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-facebook-1">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-linkedin-1">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-linkedin-1">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
               </ul>
             </div>
@@ -227,33 +236,38 @@
               <h3 class="head">Camila Garcia</h3>
               <p class="text">Marketing</p>
               <ul class="team-icon-list list">
-                <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-instagram-2">
 
-                    </use>
-                  </svg>
+                <li class="team-icon-item">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-instagram-2">
+
+                      </use>
+                    </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-twitter-1">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-twitter-1">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-facebook-1">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-facebook-1">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-linkedin-1">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-linkedin-1">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
               </ul>
             </div>
@@ -267,32 +281,36 @@
               <p class="text">UI Designer</p>
               <ul class="team-icon-list list">
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-instagram-2">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-instagram-2">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-twitter-1">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-twitter-1">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-facebook-1">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-facebook-1">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <svg class="team-icon" width="16" height="16">
-                    <use href="/images/icon-social.svg#icon-linkedin-1">
+                  <a class="team-icon-link">
+                    <svg class="team-icon" width="16" height="16">
+                      <use href="/images/icon-social.svg#icon-linkedin-1">
 
-                    </use>
-                  </svg>
+                      </use>
+                    </svg></a>
                 </li>
               </ul>
             </div>
@@ -306,33 +324,33 @@
         <h3 class="customers-head">Customers</h3>
         <ul class="customers-list list">
           <li class="customers-item">
-            <svg class="customers-icon" widht="104" height="56">
-              <use href="/images/icon-customers.svg#icon-Logo-8"></use>
+            <svg class="customers-icon" width="104" height="56">
+              <use href="./images/icon-customers.svg#icon-Logo-8"></use>
             </svg>
           </li>
           <li class="customers-item">
-            <svg class="customers-icon" widht="104" height="56">
-              <use href="/images/icon-customers.svg#icon-Logo-9"></use>
+            <svg class="customers-icon" width="104" height="56">
+              <use href="./images/icon-customers.svg#icon-Logo-9"></use>
             </svg>
           </li>
           <li class="customers-item">
-            <svg class="customer-icon" widht="104" height="56">
-              <use href="/images/icon-customers.svg#icon-Logo-10"></use>
+            <svg class="customer-icon" width="104" height="56">
+              <use href="./images/icon-customers.svg#icon-Logo-10"></use>
             </svg>
           </li>
           <li class="customers-item">
-            <svg class="customers-icon" widht="104" height="56">
-              <use href="/images/icon-customers.svg#icon-Logo-11"></use>
+            <svg class="customers-icon" width="104" height="56">
+              <use href="./images/icon-customers.svg#icon-Logo-11"></use>
             </svg>
           </li>
           <li class="customers-item">
-            <svg class="customers-icon" widht="104" height="56">
-              <use href="/images/icon-customers.svg#icon-Logo-12"></use>
+            <svg class="customers-icon" width="104" height="56">
+              <use href="./images/icon-customers.svg#icon-Logo-12"></use>
             </svg>
           </li>
           <li class="customers-item">
-            <svg class="customers-icon" widht="104" height="56">
-              <use href="/images/icon-customers.svg#icon-Client-6"></use>
+            <svg class="customers-icon" width="104" height="56">
+              <use href="./images/icon-customers.svg#icon-Client-6"></use>
             </svg>
           </li>
         </ul>
