--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li class="new-item">
             <div class="container-new-icon">
               <svg class="new-list-icon" width="64" height="64">
-                <use href="/images/icon.svg#icon-antenna"></use>
+                <use href="./images/icon.svg#icon-antenna"></use>
               </svg>
             </div>
             <h3 class="head">Strategy</h3>
@@ -73,7 +73,7 @@
           <li class="new-item">
             <div class="container-new-icon">
               <svg class="new-list-icon" width="64" height="64">
-                <use href="/images/icon.svg#icon-clock"></use>
+                <use href="./images/icon.svg#icon-clock"></use>
               </svg>
             </div>
             <h3 class="head">Punctuality</h3>
@@ -85,7 +85,7 @@
           <li class="new-item">
             <div class="container-new-icon">
               <svg class="new-list-icon" width="64" height="64">
-                <use href="/images/icon.svg#icon-diagram"></use>
+                <use href="./images/icon.svg#icon-diagram"></use>
               </svg>
             </div>
             <h3 class="head">Diligence</h3>
@@ -97,7 +97,7 @@
           <li class="new-item">
             <div class="container-new-icon">
               <svg class="new-list-icon" width="64" height="64">
-                <use href="/images/icon.svg#icon-astronaut"></use>
+                <use href="./images/icon.svg#icon-astronaut"></use>
               </svg>
             </div>
             <h3 class="head">Technologies</h3>
@@ -153,7 +153,7 @@
               <ul class="team-icon-list list">
                 <li class="team-icon-item">
                   <a class="team-icon-link"> <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-instagram-2">
+                      <use href="./images/icon-social.svg#icon-instagram-2">
 
                       </use>
                     </svg></a>
@@ -161,7 +161,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-twitter-1">
+                      <use href="./images/icon-social.svg#icon-twitter-1">
 
                       </use>
                     </svg></a>
@@ -169,7 +169,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-facebook-1">
+                      <use href="./images/icon-social.svg#icon-facebook-1">
 
                       </use>
                     </svg></a>
@@ -177,7 +177,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-linkedin-1">
+                      <use href="./images/icon-social.svg#icon-linkedin-1">
 
                       </use>
                     </svg></a>
@@ -196,7 +196,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-instagram-2">
+                      <use href="./images/icon-social.svg#icon-instagram-2">
 
                       </use>
                     </svg></a>
@@ -204,7 +204,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-twitter-1">
+                      <use href="./images/icon-social.svg#icon-twitter-1">
 
                       </use>
                     </svg></a>
@@ -212,7 +212,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-facebook-1">
+                      <use href="./images/icon-social.svg#icon-facebook-1">
 
                       </use>
                     </svg></a>
@@ -220,7 +220,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-linkedin-1">
+                      <use href="./images/icon-social.svg#icon-linkedin-1">
 
                       </use>
                     </svg></a>
@@ -240,7 +240,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-instagram-2">
+                      <use href="./images/icon-social.svg#icon-instagram-2">
 
                       </use>
                     </svg></a>
@@ -248,7 +248,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-twitter-1">
+                      <use href="./images/icon-social.svg#icon-twitter-1">
 
                       </use>
                     </svg></a>
@@ -256,7 +256,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-facebook-1">
+                      <use href="./images/icon-social.svg#icon-facebook-1">
 
                       </use>
                     </svg></a>
@@ -264,7 +264,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-linkedin-1">
+                      <use href="./images/icon-social.svg#icon-linkedin-1">
 
                       </use>
                     </svg></a>
@@ -283,7 +283,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-instagram-2">
+                      <use href="./images/icon-social.svg#icon-instagram-2">
 
                       </use>
                     </svg></a>
@@ -291,7 +291,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-twitter-1">
+                      <use href="./images/icon-social.svg#icon-twitter-1">
 
                       </use>
                     </svg></a>
@@ -299,7 +299,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-facebook-1">
+                      <use href="./images/icon-social.svg#icon-facebook-1">
 
                       </use>
                     </svg></a>
@@ -307,7 +307,7 @@
                 <li class="team-icon-item">
                   <a class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
-                      <use href="/images/icon-social.svg#icon-linkedin-1">
+                      <use href="./images/icon-social.svg#icon-linkedin-1">
 
                       </use>
                     </svg></a>
