--- a/index.html
+++ b/index.html
@@ -324,34 +324,40 @@
         <h2 class="customers-head">Customers</h2>
         <ul class="customers-list list">
           <li class="customers-item">
-            <svg class="customers-icon" width="104" height="56">
-              <use href="./images/icon-customers.svg#icon-Logo-8"></use>
-            </svg>
+            <a class="customers-icon-link">
+              <svg class="customers-icon" width="104" height="56">
+                <use href="./images/icon-customers.svg#icon-Logo-8"></use>
+              </svg></a>
           </li>
           <li class="customers-item">
-            <svg class="customers-icon" width="104" height="56">
-              <use href="./images/icon-customers.svg#icon-Logo-9"></use>
-            </svg>
+            <a class="customers-icon-link">
+              <svg class="customers-icon" width="104" height="56">
+                <use href="./images/icon-customers.svg#icon-Logo-9"></use>
+              </svg></a>
           </li>
           <li class="customers-item">
-            <svg class="customer-icon" width="104" height="56">
-              <use href="./images/icon-customers.svg#icon-Logo-10"></use>
-            </svg>
+            <a class="customers-icon-link">
+              <svg class="customer-icon" width="104" height="56">
+                <use href="./images/icon-customers.svg#icon-Logo-10"></use>
+              </svg></a>
           </li>
           <li class="customers-item">
-            <svg class="customers-icon" width="104" height="56">
-              <use href="./images/icon-customers.svg#icon-Logo-11"></use>
-            </svg>
+            <a class="customers-icon-link">
+              <svg class="customers-icon" width="104" height="56">
+                <use href="./images/icon-customers.svg#icon-Logo-11"></use>
+              </svg></a>
           </li>
           <li class="customers-item">
-            <svg class="customers-icon" width="104" height="56">
-              <use href="./images/icon-customers.svg#icon-Logo-12"></use>
-            </svg>
+            <a class="customers-icon-link">
+              <svg class="customers-icon" width="104" height="56">
+                <use href="./images/icon-customers.svg#icon-Logo-12"></use>
+              </svg></a>
           </li>
           <li class="customers-item">
-            <svg class="customers-icon" width="104" height="56">
-              <use href="./images/icon-customers.svg#icon-Client-6"></use>
-            </svg>
+            <a class="customers-icon-link">
+              <svg class="customers-icon" width="104" height="56">
+                <use href="./images/icon-customers.svg#icon-Client-6"></use>
+              </svg></a>
           </li>
         </ul>
       </div>
