--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
         <!-- <div class="container"> -->
         <ul class="img-list list">
           <li class="img-item">
-            <a class="link">
+            <a class="img-link">
               <div class="thumb"><img class="img" src="./images/banking-app.jpg" alt="Banking-App" width="360"
                   height="300" />
               </div>
@@ -72,7 +72,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="link">
+            <a class="img-link">
               <div class="thumb"><img class="img" src="./images/cashless-payment.jpg" alt="Cashless-Payment" width="360"
                   height="300" />
               </div>
@@ -83,7 +83,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="link">
+            <a class="img-link">
               <div class="thumb"><img class="img" src="./images/meditation-app.jpg" alt="Meditation-App" width="360"
                   height="300" />
               </div>
@@ -94,7 +94,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="link">
+            <a class="img-link">
               <div class="thumb"><img class="img" src="./images/taxi-service.jpg" alt="Taxi-Service" width="360"
                   height="300" />
               </div>
@@ -105,7 +105,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="link">
+            <a class="img-link">
               <div class="thumb"><img class="img" src="./images/screen-illustration.jpg" alt="Screen-Illustration"
                   width="360" height="300" />
               </div>
@@ -116,7 +116,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="link">
+            <a class="img-link">
               <div class="thumb"><img class="img" src="./images/online-courses.jpg" alt="Online-Courses" width="360"
                   height="300" />
               </div>
@@ -127,7 +127,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="link">
+            <a class="img-link">
               <div class="thumb"><img class="img" src="./images/instagram-stories.jpg" alt="Instagram-Stories"
                   width="360" height="300" />
               </div>
@@ -138,7 +138,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="link">
+            <a class="img-link">
               <div class="thumb"><img class="img" src="./images/organic-food.jpg" alt="Organic-Food" width="360"
                   height="300" />
               </div>
@@ -149,7 +149,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="link">
+            <a class="img-link">
               <div class="thumb"><img class="img" src="./images/fresh-coffee.jpg" alt="Fresh-Coffee" width="360"
                   height="300" />
               </div>
@@ -181,28 +181,28 @@
           <li class="footer-icon-item">
             <svg class="footer-icon" width="24" height="24">
               <use href="/images/icon-social.svg#icon-instagram-2">
-  
+
               </use>
             </svg>
           </li>
           <li class="footer-icon-item">
             <svg class="footer-icon" width="24" height="24">
               <use href="/images/icon-social.svg#icon-twitter-1">
-  
+
               </use>
             </svg>
           </li>
           <li class="footer-icon-item">
             <svg class="footer-icon" width="24" height="24">
               <use href="/images/icon-social.svg#icon-facebook-1">
-  
+
               </use>
             </svg>
           </li>
           <li class="footer-icon-item">
             <svg class="footer-icon" width="24" height="24">
               <use href="/images/icon-social.svg#icon-linkedin-1">
-  
+
               </use>
             </svg>
           </li>
@@ -210,6 +210,6 @@
       </div>
     </div>
   </footer>
-  </body>
-  
-  </html>
+</body>
+
+</html>
