--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li class="new-item">
             <div class="container-new-icon">
               <svg class="new-list-icon" width="64" height="64">
-                <use href="./images/icon.svg#icon-antenna"></use>
+                <use href="./images/icons.svg#icon-antenna"></use>
               </svg>
             </div>
             <h3 class="head">Strategy</h3>
@@ -73,7 +73,7 @@
           <li class="new-item">
             <div class="container-new-icon">
               <svg class="new-list-icon" width="64" height="64">
-                <use href="./images/icon.svg#icon-clock"></use>
+                <use href="./images/icons.svg#icon-clock"></use>
               </svg>
             </div>
             <h3 class="head">Punctuality</h3>
@@ -85,7 +85,7 @@
           <li class="new-item">
             <div class="container-new-icon">
               <svg class="new-list-icon" width="64" height="64">
-                <use href="./images/icon.svg#icon-diagram"></use>
+                <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
             </div>
             <h3 class="head">Diligence</h3>
@@ -97,7 +97,7 @@
           <li class="new-item">
             <div class="container-new-icon">
               <svg class="new-list-icon" width="64" height="64">
-                <use href="./images/icon.svg#icon-astronaut"></use>
+                <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>
             <h3 class="head">Technologies</h3>
