--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
     <section class="hero">
       <div class="container">
         <h1 class="hero-head">Effective Solutions for Your Business</h1>
-        <a href="data-modal-open" class="link">
-          <button class="btn order-btn" type="button">Order Service</button>
-        </a>
+        <button data-modal-open class="btn order-btn" type="button">Order Service</button>
       </div>
     </section>
 
@@ -408,6 +406,7 @@
       </div>
     </div>
   </footer>
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
