--- a/portfolio.html
+++ b/portfolio.html
@@ -179,32 +179,32 @@
         <p class="icon-text">Social media</p>
         <ul class="footer-list list">
           <li class="footer-icon-item">
-            <svg class="footer-icon" width="24" height="24">
-              <use href="/images/icon-social.svg#icon-instagram-2">
+            <a><svg class="footer-icon" width="24" height="24">
+                <use href="/images/icon-social.svg#icon-instagram-2">
 
-              </use>
-            </svg>
+                </use>
+              </svg></a>
           </li>
           <li class="footer-icon-item">
-            <svg class="footer-icon" width="24" height="24">
-              <use href="/images/icon-social.svg#icon-twitter-1">
+            <a><svg class="footer-icon" width="24" height="24">
+                <use href="/images/icon-social.svg#icon-twitter-1">
 
-              </use>
-            </svg>
+                </use>
+              </svg></a>
           </li>
           <li class="footer-icon-item">
-            <svg class="footer-icon" width="24" height="24">
-              <use href="/images/icon-social.svg#icon-facebook-1">
+            <a><svg class="footer-icon" width="24" height="24">
+                <use href="/images/icon-social.svg#icon-facebook-1">
 
-              </use>
-            </svg>
+                </use>
+              </svg></a>
           </li>
           <li class="footer-icon-item">
-            <svg class="footer-icon" width="24" height="24">
-              <use href="/images/icon-social.svg#icon-linkedin-1">
+            <a><svg class="footer-icon" width="24" height="24">
+                <use href="/images/icon-social.svg#icon-linkedin-1">
 
-              </use>
-            </svg>
+                </use>
+              </svg></a>
           </li>
         </ul>
       </div>
