--- a/portfolio.html
+++ b/portfolio.html
@@ -179,28 +179,28 @@
         <p class="icon-text">Social media</p>
         <ul class="footer-list list">
           <li class="footer-icon-item">
-            <a><svg class="footer-icon" width="24" height="24">
+            <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
                 <use href="/images/icon-social.svg#icon-instagram-2">
 
                 </use>
               </svg></a>
           </li>
           <li class="footer-icon-item">
-            <a><svg class="footer-icon" width="24" height="24">
+            <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
                 <use href="/images/icon-social.svg#icon-twitter-1">
 
                 </use>
               </svg></a>
           </li>
           <li class="footer-icon-item">
-            <a><svg class="footer-icon" width="24" height="24">
+            <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
                 <use href="/images/icon-social.svg#icon-facebook-1">
 
                 </use>
               </svg></a>
           </li>
           <li class="footer-icon-item">
-            <a><svg class="footer-icon" width="24" height="24">
+            <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
                 <use href="/images/icon-social.svg#icon-linkedin-1">
 
                 </use>
