--- a/index.html
+++ b/index.html
@@ -376,28 +376,28 @@
         <ul class="footer-list list">
           <li class="footer-icon-item">
             <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
-                <use href="/images/icon-social.svg#icon-instagram-2">
+                <use href="./images/icon-social.svg#icon-instagram-2">
 
                 </use>
               </svg></a>
           </li>
           <li class="footer-icon-item">
             <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
-                <use href="/images/icon-social.svg#icon-twitter-1">
+                <use href="./images/icon-social.svg#icon-twitter-1">
 
                 </use>
               </svg></a>
           </li>
           <li class="footer-icon-item">
             <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
-                <use href="/images/icon-social.svg#icon-facebook-1">
+                <use href="./images/icon-social.svg#icon-facebook-1">
 
                 </use>
               </svg></a>
           </li>
           <li class="footer-icon-item">
             <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
-                <use href="/images/icon-social.svg#icon-linkedin-1">
+                <use href="./images/icon-social.svg#icon-linkedin-1">
 
                 </use>
               </svg></a>
