--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           </li>
           <li class="customers-item">
             <a class="customers-icon-link">
-              <svg class="customer-icon" width="104" height="56">
+              <svg class="customers-icon" width="104" height="56">
                 <use href="./images/icon-customers.svg#icon-Logo-10"></use>
               </svg></a>
           </li>
