--- a/portfolio.html
+++ b/portfolio.html
@@ -56,9 +56,10 @@
             <button class="btn portfolio-btn" type="button">Marketing</button>
           </li>
         </ul>
+      </div>
 
-        <!-- <section class="app-img"> -->
-        <!-- <div class="container"> -->
+      <!-- <section class="app-img"> -->
+      <div class="container-app-img">
         <ul class="img-list list">
           <li class="img-item">
             <a class="img-link">
