--- a/portfolio.html
+++ b/portfolio.html
@@ -65,6 +65,9 @@
             <a class="img-link">
               <div class="thumb"><img class="img" src="./images/banking-app.jpg" alt="Banking-App" width="360"
                   height="300" />
+                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="thumb-text">
                 <h2 class="head">Banking App Interface Concept</h2>
@@ -76,6 +79,9 @@
             <a class="img-link">
               <div class="thumb"><img class="img" src="./images/cashless-payment.jpg" alt="Cashless-Payment" width="360"
                   height="300" />
+                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="thumb-text">
                 <h2 class="head">Cashless Payment</h2>
@@ -87,6 +93,9 @@
             <a class="img-link">
               <div class="thumb"><img class="img" src="./images/meditation-app.jpg" alt="Meditation-App" width="360"
                   height="300" />
+                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="thumb-text">
                 <h2 class="head">Meditation App</h2>
@@ -98,6 +107,9 @@
             <a class="img-link">
               <div class="thumb"><img class="img" src="./images/taxi-service.jpg" alt="Taxi-Service" width="360"
                   height="300" />
+                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="thumb-text">
                 <h2 class="head">Taxi Service</h2>
@@ -109,6 +121,9 @@
             <a class="img-link">
               <div class="thumb"><img class="img" src="./images/screen-illustration.jpg" alt="Screen-Illustration"
                   width="360" height="300" />
+                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="thumb-text">
                 <h2 class="head">Screen Illustrations</h2>
@@ -120,6 +135,9 @@
             <a class="img-link">
               <div class="thumb"><img class="img" src="./images/online-courses.jpg" alt="Online-Courses" width="360"
                   height="300" />
+                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="thumb-text">
                 <h2 class="head">Online Courses</h2>
@@ -131,6 +149,9 @@
             <a class="img-link">
               <div class="thumb"><img class="img" src="./images/instagram-stories.jpg" alt="Instagram-Stories"
                   width="360" height="300" />
+                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="thumb-text">
                 <h2 class="head">Instagram Stories Concept</h2>
@@ -142,6 +163,9 @@
             <a class="img-link">
               <div class="thumb"><img class="img" src="./images/organic-food.jpg" alt="Organic-Food" width="360"
                   height="300" />
+                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="thumb-text">
                 <h2 class="head">Organic Food</h2>
@@ -153,6 +177,9 @@
             <a class="img-link">
               <div class="thumb"><img class="img" src="./images/fresh-coffee.jpg" alt="Fresh-Coffee" width="360"
                   height="300" />
+                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="thumb-text">
                 <h2 class="head">Fresh Coffee</h2>
