--- a/portfolio.html
+++ b/portfolio.html
@@ -238,6 +238,9 @@
       </div>
     </div>
   </footer>
+  <div data-modal class="modal">
+    <script src="./js/modal.js"></script>
+  </div>
 </body>
 
 </html>
