--- a/index.html
+++ b/index.html
@@ -406,8 +406,9 @@
       </div>
     </div>
   </footer>
-
-  <script src="./js/modal.js"></script>
+  <div data-modal class="modal">
+    <script src="./js/modal.js"></script>
+  </div>
 </body>
 
 </html>
