--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
       </div>
     </div>
   </footer>
-  <div data-modal class="modal">
+  <div data-modal is-hidden class="modal">
     <script src="./js/modal.js"></script>
   </div>
 </body>
