--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="hero">
       <div class="container">
         <h1 class="hero-head">Effective Solutions for Your Business</h1>
-        <button data-modal-open class="btn order-btn" type="button">Order Service</button>
+        <button class="btn order-btn" type="button" data-modal-open>Order Service</button>
       </div>
     </section>
 
@@ -406,9 +406,16 @@
       </div>
     </div>
   </footer>
-  <div data-modal class="modal">
-    <script src="./js/modal.js"></script>
+  <div data-modal class="modal is-hidden">
+    <div class="modal-body">
+      <button class="modal-close-btn" type="button" data-modal-close>
+        <svg class="modal-close-btn-icon" width="8" height="8">
+          <use href="./images/icons.svg#close-btn-icon"></use>
+        </svg>
+      </button>
+    </div>
   </div>
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
