--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <a class="header-logo link" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
         <ul class="menu-list list">
           <li class="menu-item">
-            <a class="menu-link link" href="./index.html" target="_blank">Studio</a>
+            <a class="menu-link link current" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="./portfolio.html" target="_blank">Portfolio</a>
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="" target="_blank">Contacts</a>
+            <a class="menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -322,37 +322,37 @@
         <h2 class="customers-head">Customers</h2>
         <ul class="customers-list list">
           <li class="customers-item">
-            <a class="customers-icon-link">
+            <a href="" class="customers-icon-link">
               <svg class="customers-icon" width="104" height="56">
                 <use href="./images/icon-customers.svg#icon-Logo-8"></use>
               </svg></a>
           </li>
           <li class="customers-item">
-            <a class="customers-icon-link">
+            <a href="" class="customers-icon-link">
               <svg class="customers-icon" width="104" height="56">
                 <use href="./images/icon-customers.svg#icon-Logo-9"></use>
               </svg></a>
           </li>
           <li class="customers-item">
-            <a class="customers-icon-link">
+            <a href="" class="customers-icon-link">
               <svg class="customers-icon" width="104" height="56">
                 <use href="./images/icon-customers.svg#icon-Logo-10"></use>
               </svg></a>
           </li>
           <li class="customers-item">
-            <a class="customers-icon-link">
+            <a href="" class="customers-icon-link">
               <svg class="customers-icon" width="104" height="56">
                 <use href="./images/icon-customers.svg#icon-Logo-11"></use>
               </svg></a>
           </li>
           <li class="customers-item">
-            <a class="customers-icon-link">
+            <a href="" class="customers-icon-link">
               <svg class="customers-icon" width="104" height="56">
                 <use href="./images/icon-customers.svg#icon-Logo-12"></use>
               </svg></a>
           </li>
           <li class="customers-item">
-            <a class="customers-icon-link">
+            <a href="" class="customers-icon-link">
               <svg class="customers-icon" width="104" height="56">
                 <use href="./images/icon-customers.svg#icon-Client-6"></use>
               </svg></a>
@@ -375,28 +375,28 @@
         <p class="icon-text">Social media</p>
         <ul class="footer-list list">
           <li class="footer-icon-item">
-            <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
+            <a href="" class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
                 <use href="./images/icon-social.svg#icon-instagram-2">
 
                 </use>
               </svg></a>
           </li>
           <li class="footer-icon-item">
-            <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
+            <a href="" class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
                 <use href="./images/icon-social.svg#icon-twitter-1">
 
                 </use>
               </svg></a>
           </li>
           <li class="footer-icon-item">
-            <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
+            <a href="" class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
                 <use href="./images/icon-social.svg#icon-facebook-1">
 
                 </use>
               </svg></a>
           </li>
           <li class="footer-icon-item">
-            <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
+            <a href="" class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
                 <use href="./images/icon-social.svg#icon-linkedin-1">
 
                 </use>
