--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,9 @@
       <nav class="header-naviganion">
         <a class="header-logo link" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
         <ul class="menu-list list">
-          <li class="menu-item"><a class="menu-link link" href="./index.html" target="_blank">Studio</a></li>
-          <li class="menu-item"><a class="menu-link link" href="./portfolio.html" target="_blank">Portfolio</a></li>
-          <li class="menu-item"><a class="menu-link link" href="" target="_blank">Contacts</a></li>
+          <li class="menu-item"><a class="menu-link link" href="./index.html">Studio</a></li>
+          <li class="menu-item"><a class="menu-link link current" href="./portfolio.html">Portfolio</a></li>
+          <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
@@ -238,9 +238,6 @@
       </div>
     </div>
   </footer>
-  <div data-modal class="modal">
-    <script src="./js/modal.js"></script>
-  </div>
 </body>
 
 </html>
