--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
               <ul class="team-icon-list list">
 
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-instagram-2">
 
@@ -244,7 +244,7 @@
                     </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-twitter-1">
 
@@ -252,7 +252,7 @@
                     </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-facebook-1">
 
@@ -260,7 +260,7 @@
                     </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-linkedin-1">
 
@@ -279,7 +279,7 @@
               <p class="text">UI Designer</p>
               <ul class="team-icon-list list">
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-instagram-2">
 
@@ -287,7 +287,7 @@
                     </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-twitter-1">
 
@@ -295,7 +295,7 @@
                     </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-facebook-1">
 
@@ -303,7 +303,7 @@
                     </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-linkedin-1">
 
