--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
               <p class="text">Product Designer</p>
               <ul class="team-icon-list list">
                 <li class="team-icon-item">
-                  <a class="team-icon-link"> <svg class="team-icon" width="16" height="16">
+                  <a href="" class="team-icon-link"> <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-instagram-2">
 
                       </use>
                     </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-twitter-1">
 
@@ -165,7 +165,7 @@
                     </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-facebook-1">
 
@@ -173,7 +173,7 @@
                     </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-linkedin-1">
 
@@ -192,7 +192,7 @@
               <p class="text">Frontend Developer</p>
               <ul class="team-icon-list list">
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-instagram-2">
 
@@ -200,7 +200,7 @@
                     </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-twitter-1">
 
@@ -208,7 +208,7 @@
                     </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-facebook-1">
 
@@ -216,7 +216,7 @@
                     </svg></a>
                 </li>
                 <li class="team-icon-item">
-                  <a class="team-icon-link">
+                  <a href="" class="team-icon-link">
                     <svg class="team-icon" width="16" height="16">
                       <use href="./images/icon-social.svg#icon-linkedin-1">
 
@@ -324,37 +324,37 @@
           <li class="customers-item">
             <a href="" class="customers-icon-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./images/icon-customers.svg#icon-Logo-8"></use>
+                <use href="./images/icon-client.svg#icon-client-1"></use>
               </svg></a>
           </li>
           <li class="customers-item">
             <a href="" class="customers-icon-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./images/icon-customers.svg#icon-Logo-9"></use>
+                <use href="./images/icon-client.svg#icon-client-2"></use>
               </svg></a>
           </li>
           <li class="customers-item">
             <a href="" class="customers-icon-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./images/icon-customers.svg#icon-Logo-10"></use>
+                <use href="./images/icon-client.svg#icon-client-3"></use>
               </svg></a>
           </li>
           <li class="customers-item">
             <a href="" class="customers-icon-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./images/icon-customers.svg#icon-Logo-11"></use>
+                <use href="./images/icon-client.svg#icon-client-4"></use>
               </svg></a>
           </li>
           <li class="customers-item">
             <a href="" class="customers-icon-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./images/icon-customers.svg#icon-Logo-12"></use>
+                <use href="./images/icon-client.svg#icon-client-5"></use>
               </svg></a>
           </li>
           <li class="customers-item">
             <a href="" class="customers-icon-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./images/icon-customers.svg#icon-Client-6"></use>
+                <use href="./images/icon-client.svg#icon-client-6"></use>
               </svg></a>
           </li>
         </ul>
@@ -365,7 +365,7 @@
   <footer class="footer">
     <div class="footer-main-container container">
       <div class="container-footer-logo">
-        <a class="footer-logo link" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
+        <a href="" class="footer-logo link" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
@@ -410,7 +410,7 @@
     <div class="modal-body">
       <button class="modal-close-btn" type="button" data-modal-close>
         <svg class="modal-close-btn-icon" width="8" height="8">
-          <use href="./images/icons.svg#close-btn-icon"></use>
+          <use href="./images/icon/close.svg#close"></use>
         </svg>
       </button>
     </div>
