--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         <!-- <div class="container-app-img"> -->
         <ul class="img-list list">
           <li class="img-item">
-            <a class="img-link">
+            <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/banking-app.jpg" alt="Banking-App" width="360"
                   height="300" />
                 <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -76,7 +76,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="img-link">
+            <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/cashless-payment.jpg" alt="Cashless-Payment" width="360"
                   height="300" />
                 <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -90,7 +90,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="img-link">
+            <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/meditation-app.jpg" alt="Meditation-App" width="360"
                   height="300" />
                 <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -104,7 +104,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="img-link">
+            <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/taxi-service.jpg" alt="Taxi-Service" width="360"
                   height="300" />
                 <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -118,7 +118,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="img-link">
+            <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/screen-illustration.jpg" alt="Screen-Illustration"
                   width="360" height="300" />
                 <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -132,7 +132,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="img-link">
+            <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/online-courses.jpg" alt="Online-Courses" width="360"
                   height="300" />
                 <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -146,7 +146,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="img-link">
+            <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/instagram-stories.jpg" alt="Instagram-Stories"
                   width="360" height="300" />
                 <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -160,7 +160,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="img-link">
+            <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/organic-food.jpg" alt="Organic-Food" width="360"
                   height="300" />
                 <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -174,7 +174,7 @@
             </a>
           </li>
           <li class="img-item">
-            <a class="img-link">
+            <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/fresh-coffee.jpg" alt="Fresh-Coffee" width="360"
                   height="300" />
                 <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -197,7 +197,7 @@
   <footer class="footer">
     <div class="footer-main-container container">
       <div class="container-footer-logo">
-        <a class="footer-logo link" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
+        <a href="" class="footer-logo link" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
@@ -207,28 +207,28 @@
         <p class="icon-text">Social media</p>
         <ul class="footer-list list">
           <li class="footer-icon-item">
-            <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
+            <a href="" class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
                 <use href="./images/icon-social.svg#icon-instagram-2">
 
                 </use>
               </svg></a>
           </li>
           <li class="footer-icon-item">
-            <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
+            <a href="" class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
                 <use href="./images/icon-social.svg#icon-twitter-1">
 
                 </use>
               </svg></a>
           </li>
           <li class="footer-icon-item">
-            <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
+            <a href="" class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
                 <use href="./images/icon-social.svg#icon-facebook-1">
 
                 </use>
               </svg></a>
           </li>
           <li class="footer-icon-item">
-            <a class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
+            <a href="" class="footer-icon-link"><svg class="footer-icon" width="24" height="24">
                 <use href="./images/icon-social.svg#icon-linkedin-1">
 
                 </use>
