--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
   <footer class="footer">
     <div class="footer-main-container container">
       <div class="container-footer-logo">
-        <a href="" class="footer-logo link" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
+        <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-accent">Studio</span></a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
