--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,8 @@
             <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/banking-app.jpg" alt="Banking-App" width="360"
                   height="300" />
-                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                <p class="app-text img-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie
                   Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App</p>
               </div>
@@ -79,7 +80,8 @@
             <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/cashless-payment.jpg" alt="Cashless-Payment" width="360"
                   height="300" />
-                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                <p class="app-text img-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie
                   Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App</p>
               </div>
@@ -93,7 +95,8 @@
             <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/meditation-app.jpg" alt="Meditation-App" width="360"
                   height="300" />
-                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                <p class="app-text img-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie
                   Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App</p>
               </div>
@@ -107,7 +110,8 @@
             <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/taxi-service.jpg" alt="Taxi-Service" width="360"
                   height="300" />
-                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                <p class="app-text img-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie
                   Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App</p>
               </div>
@@ -121,7 +125,8 @@
             <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/screen-illustration.jpg" alt="Screen-Illustration"
                   width="360" height="300" />
-                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                <p class="app-text img-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie
                   Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App</p>
               </div>
@@ -135,7 +140,8 @@
             <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/online-courses.jpg" alt="Online-Courses" width="360"
                   height="300" />
-                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                <p class="app-text img-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie
                   Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App</p>
               </div>
@@ -149,7 +155,8 @@
             <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/instagram-stories.jpg" alt="Instagram-Stories"
                   width="360" height="300" />
-                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                <p class="app-text img-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie
                   Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App</p>
               </div>
@@ -163,7 +170,8 @@
             <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/organic-food.jpg" alt="Organic-Food" width="360"
                   height="300" />
-                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                <p class="app-text img-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie
                   Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App</p>
               </div>
@@ -177,7 +185,8 @@
             <a href="" class="img-link">
               <div class="thumb"><img class="img" src="./images/fresh-coffee.jpg" alt="Fresh-Coffee" width="360"
                   height="300" />
-                <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                <p class="app-text img-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie
                   Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App</p>
               </div>
@@ -197,7 +206,7 @@
   <footer class="footer">
     <div class="footer-main-container container">
       <div class="container-footer-logo">
-        <a href="" class="footer-logo link" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
+        <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-accent">Studio</span></a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
